// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdminSidebar should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="REPORTING"
              id="admin.sidebar.reports"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="system_analytics"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="team_analytics"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logs"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="USER MANAGEMENT"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="users"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ENVIRONMENT"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="web_server"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="database"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_storage"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="image_proxy"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="notifications_email"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="push"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="rate"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logging"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="session_lengths"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="developer"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="SITE CONFIGURATION"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="customization_new"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="localization"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="users_and_teams"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="emoji"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="posts"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_sharing_and_downloads"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="public_links"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="AUTHENTICATION"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="signup"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Sign Up"
                id="admin.sidebar.signUp"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="authentication_email"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="password"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="mfa"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="gitlab"
            name="gitlab"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GitLab"
                id="admin.sidebar.gitlab"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="INTEGRATIONS"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="integrations/features"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.features"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/plugins"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/gif"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/cors"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="custompluginplugin_0"
            name="plugins/custom/plugin_0"
            parentLink=""
            subsection={false}
            title="Plugin 0"
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="EXPERIMENTAL"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="experimental/features"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, not render the plugin in the sidebar because does not have settings 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="REPORTING"
              id="admin.sidebar.reports"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="system_analytics"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="team_analytics"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logs"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="USER MANAGEMENT"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="users"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ENVIRONMENT"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="web_server"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="database"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_storage"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="image_proxy"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="notifications_email"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="push"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="rate"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logging"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="session_lengths"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="developer"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="SITE CONFIGURATION"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="customization_new"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="localization"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="users_and_teams"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="emoji"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="posts"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_sharing_and_downloads"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="public_links"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="AUTHENTICATION"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="signup"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Sign Up"
                id="admin.sidebar.signUp"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="authentication_email"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="password"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="mfa"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="gitlab"
            name="gitlab"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GitLab"
                id="admin.sidebar.gitlab"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="INTEGRATIONS"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="integrations/features"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.features"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/plugins"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/gif"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/cors"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="EXPERIMENTAL"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="experimental/features"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (with all feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-info"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ABOUT"
              id="admin.sidebar.about"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="license"
            name="license"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Edition and License"
                id="admin.sidebar.license"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="REPORTING"
              id="admin.sidebar.reports"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="system_analytics"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="team_analytics"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logs"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="USER MANAGEMENT"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="users"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="groups"
            name="groups"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Groups"
                id="admin.sidebar.groups"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="permissions/schemes"
            name="permissions/schemes"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Permissions"
                id="admin.sidebar.permissions"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ENVIRONMENT"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="web_server"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="database"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="elasticsearch"
            name="elasticsearch"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Elasticsearch"
                id="admin.sidebar.elasticsearch"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_storage"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="image_proxy"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="notifications_email"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="push"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="cluster"
            name="cluster"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="High Availability"
                id="admin.sidebar.cluster"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="rate"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logging"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="session_lengths"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="metrics"
            name="metrics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Performance Monitoring"
                id="admin.sidebar.metrics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="developer"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="SITE CONFIGURATION"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="customization_new"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="localization"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="users_and_teams"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="announcement"
            name="announcement"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Announcement Banner"
                id="admin.sidebar.announcement"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="emoji"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="posts"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_sharing_and_downloads"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="public_links"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="AUTHENTICATION"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="signup"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Sign Up"
                id="admin.sidebar.signUp"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="authentication_email"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="password"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="mfa"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="ldap"
            name="ldap"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="AD/LDAP"
                id="admin.sidebar.ldap"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="saml"
            name="saml"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="SAML 2.0"
                id="admin.sidebar.saml"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="oauth"
            name="oauth"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="OAuth 2.0"
                id="admin.sidebar.oauth"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="INTEGRATIONS"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="integrations/features"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.features"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/plugins"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/gif"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/cors"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-list"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="COMPLIANCE"
              id="admin.sidebar.compliance"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="compliance/data_retention"
            name="compliance/data_retention"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Data Retention Policy"
                id="admin.sidebar.dataRetentionPolicy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="compliance/export"
            name="compliance/export"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Export (Beta)"
                id="admin.sidebar.complianceExport"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="compliance/settings"
            name="compliance/settings"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Settings"
                id="admin.sidebar.compliance"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="compliance/monitoring"
            name="compliance/monitoring"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Monitoring"
                id="admin.sidebar.complianceMonitoring"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="compliance/custom_terms_of_service"
            name="compliance/custom_terms_of_service"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Custom Terms of Service (Beta)"
                id="admin.sidebar.customTermsOfService"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="EXPERIMENTAL"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="experimental/features"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (without any explicit feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(SidebarHeader) />
  <div
    className="nav-pills__container"
  >
    <Highlight
      filter=""
    >
      <ul
        className="nav nav-pills nav-stacked"
      >
        <li
          className="filter-container"
        >
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <input
            className="filter "
            onChange={[Function]}
            placeholder="Find settings"
            type="text"
            value=""
          />
        </li>
        <AdminSidebarCategory
          icon="fa-info"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ABOUT"
              id="admin.sidebar.about"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="license"
            name="license"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Edition and License"
                id="admin.sidebar.license"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-bar-chart"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="REPORTING"
              id="admin.sidebar.reports"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="system_analytics"
            name="system_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Site Statistics"
                id="admin.sidebar.siteStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="team_analytics"
            name="team_analytics"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Team Statistics"
                id="admin.sidebar.teamStatistics"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logs"
            name="logs"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logs"
                id="admin.sidebar.logs"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-users"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="USER MANAGEMENT"
              id="admin.sidebar.userManagement"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="users"
            name="users"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users"
                id="admin.sidebar.users"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="permissions/system-scheme"
            name="permissions/system-scheme"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="System Scheme"
                id="admin.sidebar.systemScheme"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-server"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="ENVIRONMENT"
              id="admin.sidebar.environment"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="web_server"
            name="web_server"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Web Server"
                id="admin.sidebar.webServer"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="database"
            name="database"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Database"
                id="admin.sidebar.database"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_storage"
            name="file_storage"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Storage"
                id="admin.sidebar.fileStorage"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="image_proxy"
            name="image_proxy"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Image Proxy"
                id="admin.sidebar.imageProxy"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="notifications_email"
            name="notifications_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email Notifications"
                id="admin.sidebar.emailNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="push"
            name="push"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Push Notifications"
                id="admin.sidebar.pushNotifications"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="rate"
            name="rate"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Rate Limiting"
                id="admin.sidebar.rateLimiting"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="logging"
            name="logging"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Logging"
                id="admin.sidebar.logging"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="session_lengths"
            name="session_lengths"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Session Lengths"
                id="admin.sidebar.sessionLengths"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="developer"
            name="developer"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Developer"
                id="admin.sidebar.developer"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-cogs"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="SITE CONFIGURATION"
              id="admin.sidebar.site"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="customization_new"
            name="customization_new"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Customization"
                id="admin.sidebar.customization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="localization"
            name="localization"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Localization"
                id="admin.sidebar.localization"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="users_and_teams"
            name="users_and_teams"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Users and Teams"
                id="admin.sidebar.usersAndTeams"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="announcement"
            name="announcement"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Announcement Banner"
                id="admin.sidebar.announcement"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="emoji"
            name="emoji"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Emoji"
                id="admin.sidebar.emoji"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="posts"
            name="posts"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Posts"
                id="admin.sidebar.posts"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="file_sharing_and_downloads"
            name="file_sharing_and_downloads"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="File Sharing and Downloads"
                id="admin.sidebar.fileSharingDownloads"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="public_links"
            name="public_links"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Public Links"
                id="admin.sidebar.publicLinks"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-shield"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="AUTHENTICATION"
              id="admin.sidebar.authentication"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="signup"
            name="signup"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Sign Up"
                id="admin.sidebar.signUp"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="authentication_email"
            name="authentication_email"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Email"
                id="admin.sidebar.email"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="password"
            name="password"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Password"
                id="admin.sidebar.password"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="mfa"
            name="mfa"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="MFA"
                id="admin.sidebar.mfa"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="oauth"
            name="oauth"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="OAuth 2.0"
                id="admin.sidebar.oauth"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-plug"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="INTEGRATIONS"
              id="admin.sidebar.integrations"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="integrations/features"
            name="integrations/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.features"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/plugins"
            name="integrations/plugins"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Plugins"
                id="admin.integrations.plugins"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/gif"
            name="integrations/gif"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="GIF (Beta)"
                id="admin.sidebar.gif"
                values={Object {}}
              />
            }
          />
          <AdminSidebarSection
            key="integrations/cors"
            name="integrations/cors"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="CORS"
                id="admin.sidebar.cors"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-list"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="COMPLIANCE"
              id="admin.sidebar.compliance"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="compliance/monitoring"
            name="compliance/monitoring"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Compliance Monitoring"
                id="admin.sidebar.complianceMonitoring"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
        <AdminSidebarCategory
          icon="fa-flask"
          parentLink="/admin_console"
          sectionClass=""
          title={
            <FormattedMessage
              defaultMessage="EXPERIMENTAL"
              id="admin.sidebar.experimental"
              values={Object {}}
            />
          }
        >
          <AdminSidebarSection
            key="experimental/features"
            name="experimental/features"
            parentLink=""
            subsection={false}
            title={
              <FormattedMessage
                defaultMessage="Features"
                id="admin.sidebar.experimentalFeatures"
                values={Object {}}
              />
            }
          />
        </AdminSidebarCategory>
      </ul>
    </Highlight>
  </div>
</div>
`;
